[project]

name = "wtftw_contrib"
version = "0.0.2"
authors = ["Simon Wollwage"]

[dependencies.wtftw]
git = "https://github.com/Kintaro/wtftw.git"

[dependencies]
bitflags = "~1"
log = "0.4.1"
num-traits = "0.2.2"
libc = "0.2.40"
dylib = "0.0.3"

[lib]
name = "wtftw_contrib"
path = "src/lib.rs"
crate-type = ["rlib"]
