[project]

name = "wtftw_contrib"
version = "0.0.2"
authors = ["Simon Wollwage"]

[dependencies.wtftw]
git = "https://github.com/Kintaro/wtftw.git"

[dependencies]
bitflags = "0.1"
rustc-serialize = "0.3.15"
log = "0.3.1"
num = "0.1.25"
libc = "0.2.65"
dylib = "0.0.1"

[lib]
name = "wtftw_contrib"
path = "src/lib.rs"
crate-type = ["rlib"]
