[project]

name = "wtftw_contrib"
version = "0.0.2"
authors = ["Simon Wollwage"]
edition = "2018"

[dependencies.wtftw]
path = "../wtftw"

[dependencies]
bitflags = "1.2.1"
rustc-serialize = "0.3.24"
log = "0.4.8"
num = "0.3.0"
libc = "0.2.71"
dylib = "0.0.3"

[lib]
name = "wtftw_contrib"
path = "src/lib.rs"
crate-type = ["rlib"]
